<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.MainMenuFragment">


    <Button
        android:id="@+id/SoloPlayButton"
        style="@style/MainMenuButtonStyle"
        android:text="@string/main_soloplay"
        app:layout_constraintBottom_toTopOf="@id/TwoPlayerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/TwoPlayerButton"
        style="@style/MainMenuButtonStyle"
        android:text="@string/main_2playerButton"
        app:layout_constraintBottom_toTopOf="@id/OnlinePlayButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SoloPlayButton" />

    <Button
        android:id="@+id/OnlinePlayButton"
        style="@style/MainMenuButtonStyle"
        android:text="@string/main_onlinePlayButton"
        app:layout_constraintBottom_toTopOf="@id/SettingButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TwoPlayerButton" />

    <Button
        android:id="@+id/SettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OnlinePlayButton" />

</androidx.constraintlayout.widget.ConstraintLayout>