<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/JoinRoomButton"
        style="@style/MainMenuButtonStyle"
        android:text="@string/JoinRoomButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/MakeRoomButton"
        style="@style/MainMenuButtonStyle"
        android:text="@string/MakeRoomButtonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/JoinRoomButton" />

    <Button
        android:id="@+id/QuickMatchButton"
        style="@style/MainMenuButtonStyle"
        android:text="@string/QuickMatchButtonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MakeRoomButton" />

</androidx.constraintlayout.widget.ConstraintLayout>